Fix image alignment under skills

--- a/css/palette.css
+++ b/css/palette.css
@@ -38,6 +38,16 @@
 }
 
 .skills-size {
-    height: 100px;
-    width: auto;
+    object-fit: scale-down;
+    object-position: center;
+    background-color: white;
+    height: 150px;
+    width: 150px;
+}
+
+.profile-size {
+    object-fit: cover;
+    object-position: center;
+    height: 200px;
+    width: 200px;
 }
